# pollen

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  calyx_depth.py  depth.fuse  depth.fuse.data  depth.py  depth1.py  depth2.py  depth3.py  filesize_benchmark.py  filesize_benchmark.txt  format_gfa.py  hello.txt  instructions.txt  k.gfa  k.json  k.og  latency_benchmark.py  mygfa.py  node_depth.py  normalization.toml  parse_data.py  parse_gfa.py  performance-output.txt  preprocess.py  process.py  pyproject.toml  python_output.txt  requirements.txt  test.sh
.github/: odgi.sh
.github/workflows/: bencher.yml  build.yml  code-quality.yml  docs.yml  flatgfa-py.yml  performance.yml
.zed/: settings.json
bench/: .gitignore  Makefile  bar.vl.json  bench.py  benchmark_web.py  benchmark_web_annotated.py  config.toml  filesize_benchmark.py  filesize_benchmark_web.py  graphs.toml  latency_benchmark.py  latency_benchmark_web.py  normalization.toml  sizes.py  summary.py
compsust/: Makefile  bib.bib  gfa.bib  gfa.tex  proposal.tex
data_gen/: pyproject.toml
data_gen/data_gen/: __main__.py  depth.py
flatgfa/: .gitattributes  Cargo.toml  README.md  pyproject.toml
flatgfa-c/: Cargo.toml  README.md  build.rs
flatgfa-c/example/: Makefile  example.c
flatgfa-c/include/: flatgfa.h
flatgfa-c/src/: lib.rs
flatgfa-py/: .gitignore  Cargo.toml  GAFexample.py  README.md  chr6.gfa  chr6gaf.gaf  example.py  flatgfa.pyi  pyproject.toml  test_flatgfa.py
flatgfa-py/docs/: conf.py  index.rst
flatgfa-py/examples/: depth.py  gaf.py  matrix.py
flatgfa-py/examples/matrix_gaf_folder/: tiny_smaller.gaf
flatgfa-py/src/: lib.rs
flatgfa-py/test/: test_flatgfa.py  test_gaf.py  test_matrix.py  tiny.gaf  tiny.gfa  tiny2.gaf
flatgfa-sh/: Cargo.toml  EXAMPLES.md  README.md  example.sh  windows.sh
flatgfa-sh/src/: builder.rs  eval.rs  ir.rs  main.rs  opt.rs  parse.rs  pretty.rs
flatgfa-sh/src/eval/: instr.rs  mod.rs
flatgfa/examples/: window_depth.rs
flatgfa/src/: bedcmds.rs  cmds.rs  emit.rs  file.rs  flatbed.rs  flatgfa.rs  gaf.rs  gfaline.rs  index.rs  lib.rs  main.rs  memfile.rs  namemap.rs  packedseq  packedseq.rs  packedseqcrumb.rs  packedseqnibble.rs  parse.rs  pool.rs  print.rs  test_export_import.sh
flatgfa/src/cli/: cmds.rs  main.rs
flatgfa/src/commands/: basic_cmds.rs  chop.rs  depth.rs  extract.rs  mod.rs
flatgfa/src/fgfa_ds/: file.rs  flatgfa.rs  gfaline.rs  mod.rs  parse.rs  pool.rs  print.rs
flatgfa/src/ops/: bedcmds.rs  beddepth.rs  bench.rs  chop.rs  depth.rs  extract.rs  gaf.rs  mod.rs  pangenotype.rs  position.rs  window_depth.rs  windows.rs
flatgfa/tests/: test.t  test.txt  turnt.toml
gfadl/: depth.dl  flatten.dl  gfa.dl  gfadl.py
mygfa/: .gitignore  README.md  example.py  pyproject.toml
mygfa/docs/: api.rst  conf.py  index.rst
mygfa/mygfa/: __init__.py  __main__.py  gfa.py  mygfa.py  preprocess.py
polbin/: Cargo.toml
polbin/src/: cmds.rs  file.rs  flatgfa.rs  gfaline.rs  main.rs  parse.rs  pool.rs  print.rs
pollen/: Cargo.toml  argparse_custom.py  libast.rlib  libmod.rlib  main.py  main.py~  pollen-docs.md  runt.toml  tmp.data  tmp.futil  types.md
pollen-py/: README.md
pollen-py/depth/: parse_data.py
pollen-py/pollen/: argparse_custom.py  main.py~
pollen/depth/: #parse_data.txt#  calyx_depth.py  calyx_depth.py~  calyx_depth_ref.py  k.data  k.futil  main.py  main.py~  parse_data.py  parse_data.txt  python_degree.py  python_depth.py
pollen/src/: ast.rs  main.rs  parse.rs  pollen.pest
pollen/test/: degree.pol  test1.txt  types.md
pollen/tests/: crush.pol  crush.pollen  degree.pollen  depth.pol  depth.pollen  flip.pol  flip.pollen  overlap.pol  overlap.pollen  paths.pol  paths.pollen  test1.txt
pollen_data_gen/: pyproject.toml
pollen_data_gen/pollen_data_gen/: __init__.py  __main__.py  depth.py  simple.py
pollen_py/: README.md  argparse_custom.py  main.py  pyproject.toml
pollen_py/depth/: main.py
pollen_py/depth/processing-elements/: parse_data.py
pollen_py/depth/processing-elements/test/subset-paths/: ex2.txt
pollen_py/pollen/: __init__.py
pollen_py/pollen/depth/: calyx_depth.py  main.py  parse_data.py  python_depth.py
prototype/: calyx_depth_simple.py  calyx_depth_simple_short_circuit_loops.py  calyx_depth_simple_short_circuit_loops2.py  depth.data  depth.futil  k.data  parse_data.py  parse_data_scl2.py  temp.data  temp.futil
prototype/test/: k.data  time.sh  turnt.toml
slow_odgi/: Makefile  README.md  __main__.py  chop.py  chop_by.py  crush_n.py  degree.py  depth.py  examples.md  flatten.py  flip.py  inject.py  inject_setup.py  kmers.py  list_paths.py  matrix.py  mygfa.py  node_degree.py  node_depth.py  norm.py  normalize.py  overlap.py  paths.py  perturb.py  preprocess.py  pyproject.toml  to_json.py  validate.py  validate_setup.py
slow_odgi/slow_odgi/: __main__.py  chop.py  crush.py  degree.py  depth.py  flatten.py  flip.py  inject.py  inject_setup.py  matrix.py  mkjson.py  mygfa.py  norm.py  overlap.py  paths.py  preprocess.py  proofs.py  somepaths.py  to_json.py  validate.py  validate_setup.py
slow_odgi/src/: __init__.py  mkjson.py  mygfa.py  validate.py
slow_odgi/test/chop/: DRB1-3123.out  gen_outs.sh  k.out  k.output  note5.out  overlap.out  t.out  turnt.toml
slow_odgi/test/crush/: DRB1-3123.out  LPA.out  gen_outs.sh  note5.out  q.chop.out  turnt.toml
slow_odgi/test/degree/: DRB1-3123.out  LPA.out  gen_outs.sh  k.expect  note5.out  q.chop.expect  turnt.toml
slow_odgi/test/depth/: LPA.out  gen_outs.sh  k.out  note5.expect  overlap.expect  q.chop.out  turnt.toml
slow_odgi/test/depth_json/: gen_outs.sh  k.out  note5.out  overlap.out  t.out  turnt.toml
slow_odgi/test/emit/: gen_outs.sh  turnt.toml
slow_odgi/test/flip/: DRB1-3123.out  LPA.out  gen_outs.sh  k.out  note5.out  overlap.out  t.out  turnt.toml
test/: .gitignore  DRB1-3123.bed  DRB1-3123.out  DRB1-3123_norm.gfa  DRB1-3123_norm.paths  chr6.C4.bed  h.bed  h.inj  i.bed  i.gfa  i.inj  j.gfa  j.inj  k.bed  k.gfa  k.groomed  k.inj  k.out  perturb.sh  turnt.toml
test/depth/: DRB1-3123.og  (+8 more)
tests/: .gitignore  turnt.toml
(+93 files in other folders)
