[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "pollen"
author = "Susan Garry"
author-email = "shg64@cs.cornell.edu"
home-page = "https://github.com/cucapra/calyx-pangenome"
description-file = "README.md"
requires-python = ">=3.8"
requires = []

[tool.flit.scripts]
pollen = "pollen.main:main"