[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "data_gen"
authors = [{name = "Anshuman Mohan", email = "amohan@cs.cornell.edu"}]
dynamic = ["version", "description"]
dependencies = ["mygfa"]

[project.urls]
Home = "https://github.com/cucapra/pollen/tree/main/data_gen"

[project.scripts]
data_gen = "data_gen.__main__:main"