[package]
name = "flatgfa-sh"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "flash"
path = "src/main.rs"

[dependencies]
flatgfa = { path = "../flatgfa" }
pico-args = "0.5"
rustyline = "18"
memmap = { workspace = true }
bstr = { workspace = true }
enum-map = "2"
smallvec = "1"
brush-parser = "0.4"

[dev-dependencies]
trycmd = "1.2.0"
