[package]
name = "flatgfa"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fgfa"
path = "src/cli/main.rs"

[dependencies]
argh = "0.1.12"
atoi = "2.0.0"
bstr = "1.10.0"
memchr = "2.7.4"
memmap = "0.7.0"
num_enum = "0.7.3"
rayon = "1.10.0"
tinyvec = "1.8.0"
zerocopy = { version = "0.7.35", features = ["derive"] }

[profile.profiling]
inherits = "release"
debug = true
