[package]
name = "flatgfa"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fgfa"
path = "src/cli/main.rs"

[dependencies]
argh = "0.1.13"
atoi = "2.0.0"
bit-vec = "0.8.0"
bstr = "1.12.0"
memchr = "2.7.4"
memmap = "0.7.0"
num_enum = "0.7.3"
rayon = "1.10.0"
tinyvec = "1.9.0"
zerocopy = { version = "0.8.25", features = ["derive"] }

[dev-dependencies]
rand = "0.8"
