[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mygfa"
authors = [{name = "Anshuman Mohan", email = "amohan@cs.cornell.edu"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
readme = "README.md"

[project.urls]
Home = "https://github.com/cucapra/pollen/tree/main/mygfa"
