[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pollen"
author = "Susan Garry"
author-email = "shg64@cs.cornell.edu"
home-page = "https://github.com/cucapra/pollen"
description-file = "README.md"
requires-python = ">=3.8"
requires = []

[tool.flit.scripts]
exine = "pollen.main:main"
